# AI_Agent

./: README.md
AI_QNA_Chatbot/: app.py
AI_QNA_Chatbot/vector_store/: index.faiss  index.pkl
CrewAI_Agent/first_agent/: README.md  pyproject.toml
CrewAI_Agent/first_agent/output/: report.md
CrewAI_Agent/first_agent/src/first_agent/: crew.py  main.py
