[project]
name = "first_agent"
version = "0.1.0"
description = "first_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
first_agent = "first_agent.main:run"
run_crew = "first_agent.main:run"
train = "first_agent.main:train"
replay = "first_agent.main:replay"
test = "first_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
